--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -323,6 +323,22 @@ min      = 0
 max      = 3
 cat      = SC_BASIC
 
+[SDT_BOOL]
+base     = GameSettings
+var      = order.timetable_automated
+from     = TIMESEP_SV
+def      = true
+str	  = STR_CONFIG_SETTING_TIMETABLE_AUTOMATED
+strhelp  = STR_CONFIG_SETTING_TIMETABLE_AUTOMATED_HELPTEXT
+
+[SDT_BOOL]
+base	  = GameSettings
+var	  = order.timetable_separation
+from	  = TIMESEP_SV
+def	  = true
+str      = STR_CONFIG_SETTING_TIMETABLE_SEPARATION
+strhelp  = STR_CONFIG_SETTING_TIMETABLE_SEPARATION_HELPTEXT
+
 ; There are only 21 predefined town_name values (0-20), but you can have more with newgrf action F so allow
 ; these bigger values (21-255). Invalid values will fallback to english on use and (undefined string) in GUI.
 [SDT_OMANY]
