--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -474,6 +474,19 @@ strhelp  = STR_CONFIG_SETTING_EXTRADYNAMITE_HELPTEXT
 
 [SDT_VAR]
 base     = GameSettings
+var      = economy.daylength_factor
+type     = SLE_UINT8
+from     = 160
+def      = 1
+min      = 1
+max      = 255
+interval = 1
+str      = STR_CONFIG_SETTING_DAYLENGTH_FACTOR
+strval   = STR_JUST_INT
+proc     = NULL
+
+[SDT_VAR]
+base     = GameSettings
 var      = construction.max_bridge_length
 type     = SLE_UINT16
 from     = 159
