--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -800,6 +800,13 @@ cat      = SC_BASIC
 length   = 1
 to       = 158
 
+[SDT_BOOL]
+base     = GameSettings
+var      = vehicle.atc_speed_adaption
+from     = 190
+def      = true
+str      = STR_CONFIG_SETTING_ATC_SPEED_ADAPTION
+
 [SDT_VAR]
 base     = GameSettings
 var      = vehicle.smoke_amount
