Made transfer payments optional.

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -1428,6 +1428,17 @@ str      = STR_CONFIG_SETTING_MODIFIED_ROAD_REBUILD
 strhelp  = STR_CONFIG_SETTING_MODIFIED_ROAD_REBUILD_HELPTEXT
 cat      = SC_EXPERT
 
+[SDT_BOOL]
+base     = GameSettings
+var      = economy.transfer_payments
+from     = 190
+to       = SL_MAX_VERSION
+flags    = 0
+guiflags = 0
+def      = false
+str      = STR_CONFIG_SETTING_ECONOMY_TRANSFER_PAYMENT
+proc     = NULL
+
 ; previously ai-new setting.
 [SDT_NULL]
 length   = 1
