Trip history patch
http://www.tt-forums.net/viewtopic.php?f=33&t=33411

Conflicts:
	src/saveload/saveload.cpp
	src/saveload/saveload.h

Conflicts:
	src/saveload/saveload.h

--- a/projects/openttd_vs80.vcproj
+++ b/projects/openttd_vs80.vcproj
@@ -799,6 +799,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\..\src\triphistory_cmd.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\..\src\vehicle.cpp"
 				>
 			</File>
@@ -1271,6 +1275,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\..\src\triphistory.h"
+				>
+			</File>
+			<File
 				RelativePath=".\..\src\network\network.h"
 				>
 			</File>
@@ -1460,6 +1468,10 @@
 			</File>
 			<File
 				RelativePath=".\..\src\object.h"
+				>
+			</File>
+			<File
+				RelativePath=".\..\src\triphistory_gui.cpp"
 				>
 			</File>
 			<File
