--- a/projects/openttd_vs90.vcproj
+++ b/projects/openttd_vs90.vcproj
@@ -796,6 +796,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\..\src\triphistory_cmd.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\..\src\vehicle.cpp"
 				>
 			</File>
@@ -1268,6 +1272,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\..\src\triphistory.h"
+				>
+			</File>
+			<File
 				RelativePath=".\..\src\network\network.h"
 				>
 			</File>
@@ -1457,6 +1465,10 @@
 			</File>
 			<File
 				RelativePath=".\..\src\object.h"
+				>
+			</File>
+			<File
+				RelativePath=".\..\src\triphistory_gui.cpp"
 				>
 			</File>
 			<File
