Use patch style savegame number.

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -1431,7 +1431,7 @@ cat      = SC_EXPERT
 [SDT_BOOL]
 base     = GameSettings
 var      = economy.transfer_payments
-from     = 190
+from     = SL_TRANSFER_PAYMENTS
 to       = SL_MAX_VERSION
 flags    = 0
 guiflags = 0
