--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -326,16 +326,16 @@ cat      = SC_BASIC
 [SDT_BOOL]
 base     = GameSettings
 var      = order.timetable_automated
-from     = TIMESEP_SV
+from     = SL_TIMESEP
 def      = true
-str	  = STR_CONFIG_SETTING_TIMETABLE_AUTOMATED
+str      = STR_CONFIG_SETTING_TIMETABLE_AUTOMATED
 strhelp  = STR_CONFIG_SETTING_TIMETABLE_AUTOMATED_HELPTEXT
 
 [SDT_BOOL]
-base	  = GameSettings
-var	  = order.timetable_separation
-from	  = TIMESEP_SV
-def	  = true
+base     = GameSettings
+var      = order.timetable_separation
+from     = SL_TIMESEP
+def      = true
 str      = STR_CONFIG_SETTING_TIMETABLE_SEPARATION
 strhelp  = STR_CONFIG_SETTING_TIMETABLE_SEPARATION_HELPTEXT
 
@@ -492,7 +492,7 @@ strhelp  = STR_CONFIG_SETTING_EXTRADYNAMITE_HELPTEXT
 base     = GameSettings
 var      = economy.daylength_factor
 type     = SLE_UINT8
-from     = 160
+from     = SL_DAYLENGTH
 def      = 1
 min      = 1
 max      = 255
