Applied latest patch of wormhole signals

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -2603,6 +2603,17 @@ strval   = STR_JUST_INT
 cat      = SC_EXPERT
 
 [SDTC_VAR]
+var      = gui.simulated_wormhole_signals
+type     = SLE_UINT8
+flags    = SLF_NOT_IN_SAVE | SLF_NO_NETWORK_SYNC
+def      = 2
+min      = 1
+max      = 16
+str      = STR_CONFIG_SETTING_SIMULATE_SIGNALS
+strval   = STR_CONFIG_SETTING_SIMULATE_SIGNALS_VALUE
+proc     = RedrawScreen
+
+[SDTC_VAR]
 var      = gui.drag_signals_density
 type     = SLE_UINT8
 flags    = SLF_NOT_IN_SAVE | SLF_NO_NETWORK_SYNC
