--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -500,6 +500,19 @@ str      = STR_CONFIG_SETTING_MAX_TUNNEL_LENGTH
 strhelp  = STR_CONFIG_SETTING_MAX_TUNNEL_LENGTH_HELPTEXT
 strval   = STR_CONFIG_SETTING_TILE_LENGTH
 
+[SDT_VAR]
+base     = GameSettings
+var      = construction.simulated_wormhole_signals
+type     = SLE_UINT8
+flags    = 0
+def      = 2
+min      = 1
+max      = 16
+str      = STR_CONFIG_SETTING_SIMULATE_SIGNALS
+strval   = STR_CONFIG_SETTING_SIMULATE_SIGNALS_VALUE
+proc     = RedrawScreen
+from     = SL_WORMHOLE_SIGNALS
+
 # construction.longbridges
 [SDT_NULL]
 length   = 1
@@ -2834,17 +2847,6 @@ str      = STR_CONFIG_SETTING_COLOURED_NEWS_YEAR
 strhelp  = STR_CONFIG_SETTING_COLOURED_NEWS_YEAR_HELPTEXT
 strval   = STR_JUST_INT
 cat      = SC_EXPERT
-
-[SDTC_VAR]
-var      = gui.simulated_wormhole_signals
-type     = SLE_UINT8
-flags    = SLF_NOT_IN_SAVE | SLF_NO_NETWORK_SYNC
-def      = 2
-min      = 1
-max      = 16
-str      = STR_CONFIG_SETTING_SIMULATE_SIGNALS
-strval   = STR_CONFIG_SETTING_SIMULATE_SIGNALS_VALUE
-proc     = RedrawScreen
 
 [SDTC_VAR]
 var      = gui.drag_signals_density
