--- a/projects/openttd_vs80.vcproj
+++ b/projects/openttd_vs80.vcproj
@@ -475,6 +475,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\..\src\clipboard.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\..\src\command.cpp"
 				>
 			</File>
@@ -915,6 +919,18 @@
 				>
 			</File>
 			<File
+				RelativePath=".\..\src\clipboard_func.h"
+				>
+			</File>
+			<File
+				RelativePath=".\..\src\clipboard_gui.h"
+				>
+			</File>
+			<File
+				RelativePath=".\..\src\clipboard_type.h"
+				>
+			</File>
+			<File
 				RelativePath=".\..\src\cmd_helper.h"
 				>
 			</File>
@@ -960,6 +976,10 @@
 			</File>
 			<File
 				RelativePath=".\..\src\console_type.h"
+				>
+			</File>
+			<File
+				RelativePath=".\..\src\copypaste_cmd.h"
 				>
 			</File>
 			<File
@@ -1739,6 +1759,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\..\src\tilearea_func.h"
+				>
+			</File>
+			<File
 				RelativePath=".\..\src\tilearea_type.h"
 				>
 			</File>
@@ -2035,6 +2059,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\..\src\clipboard_gui.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\..\src\company_gui.cpp"
 				>
 			</File>
@@ -2267,6 +2295,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\..\src\widgets\clipboard_widget.h"
+				>
+			</File>
+			<File
 				RelativePath=".\..\src\widgets\company_widget.h"
 				>
 			</File>
@@ -2480,6 +2512,10 @@
 			</File>
 			<File
 				RelativePath=".\..\src\clear_cmd.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\..\src\copypaste_cmd.cpp"
 				>
 			</File>
 			<File
