Use SL_ATC_SPEED for atc setting.

--- a/src/table/settings.ini
+++ b/src/table/settings.ini
@@ -857,7 +857,7 @@ to       = 158
 [SDT_BOOL]
 base     = GameSettings
 var      = vehicle.atc_speed_adaption
-from     = 190
+from     = SL_ATC_SPEED
 def      = true
 str      = STR_CONFIG_SETTING_ATC_SPEED_ADAPTION
 
